--- a/src/GeneralQC_Experimentation.ipynb
+++ b/src/GeneralQC_Experimentation.ipynb
@@ -14,7 +14,7 @@
     "not_representation = \"X\"\n",
     "not_placement = \"end\"\n",
     "gate_layers = [\"H\", \"Rx\"]\n",
-    "var_layers = 2\n",
+    "var_layers = 1\n",
     "parameterize_nouns = True\n",
     "# independent_sublayer = False\n",
     "\n",
@@ -26,7 +26,7 @@
     "spsa_a = 0.2\n",
     "spsa_c = 0.06\n",
     "spsa_n_iter = 800\n",
-    "k0 = 719\n",
+    "k0 = 0\n",
     "\n",
     "# SVM type\n",
     "kernel = 'rbf'\n",
@@ -34,7 +34,7 @@
     "optimize_svm = False\n",
     "\n",
     "# Experiment metadata\n",
-    "experiment_name = \"v5_H_CRx_800iter_with_nouns\"\n",
+    "experiment_name = \"v5_H_CRx_800iter_no_nouns_take4\"\n",
     "verbose = True"
    ]
   },
@@ -558,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12c6528f0ca547549fcbf9dc8f5a8e2d",
+       "model_id": "96d896560a12462d8da0a64eaa36bf2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -572,7 +572,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d468f0b611d942479e746293b0116bad",
+       "model_id": "66b6906036724c038bdca024f14faf99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -586,7 +586,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27eb2cccc5584a508847d7dab3fd30f5",
+       "model_id": "3a98d1bdf06a4806ae5b11a25391d008",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,7 +600,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e128e26471ee41f78ebf062733d2c620",
+       "model_id": "f502d76e237848e3a1093da4272cebbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9047c605fa224221a4b35d3d5db2c1c8",
+       "model_id": "4091a4be834641168e0932037c08d27c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -628,7 +628,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48a576137cec4e4fbcc0dcaf255f4de6",
+       "model_id": "5dca4cf3977e4a8fada2d55ebd5f4acc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,7 +642,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eab4c6e7398411a80b587680bcc675c",
+       "model_id": "fde62a5e7010431588307461252d7c32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -656,7 +656,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ead28fadca404ec3b4aa827a1e75180a",
+       "model_id": "80b6076af07b4d1098a8e556e0b1a3b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -670,7 +670,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20c0cd3fd36645f5beff03a0842bf3de",
+       "model_id": "f03fd3bdc5f14752bbd2af7049f68dd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1082,19 +1082,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "opt_results = run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, train_params, load_params, params_saved=params_saved, spsa_n_iter=spsa_n_iter, k0=k0)\n",
     "\n",
@@ -1106,18 +1094,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# params_saved = [1.0382071908989239, 0.6645383013161006, -0.4505922107096337, -0.9258480366208011, 0.5243618968855266, 1.7395961059411849, 0.4647940498155238, 0.11963985080039756, 0.7575906894935516, 0.6217733484213046, 1.8876486455893522, -0.6216977276762541, 1.5286322933119258, -0.17824219036710878, 1.0479170118398122, 0.10441785349863093, 0.9810306825596972, -0.6436704780948737, 1.0231047714057993, 1.9133754050783498, 0.008898227905438063, 0.8168863897229854, 0.7118337284456691, -1.2399646269882107, 0.4689238579415065, 0.14517396947347422, 1.5052105796928223, 1.1224107614547414, 0.00355179288247217, 1.2057591172570594, 0.9511974737102875, 0.21815226443490673, 1.0347415087805212, 1.4816345055134295, 1.539767495812046, 0.8051562678596103, 1.9693861049253931, 0.3057059184280759, 1.0316692627713562, 0.3007999857278838, 0.4867949596977848, 1.0972200899952786, 0.522699105484079, -0.07493770555006797, 0.2691568636127531, 2.653374877606683, -1.3329960158657639, 1.2158264798346405, -0.1055619547971146, 1.4221597559721224, 0.49779112986218066, 0.08156544659088309, -0.36224721778927393, 0.3803414617435599, -0.44288471657679424, 1.0064246507523504, -0.14946461951136408, 1.862217540713058]"
+    "# params_saved = [0.960241789239674, 0.6513029194874719, -0.39574205355461667, -0.7569772430451088, 0.725343270200996, 1.6309424492508497, 0.4844267059533122, 0.019763690319597627, 0.720245457647236, 0.6588748256828271, 1.7517621422803684, -0.5588056972827086, 1.4370033530509676, -0.14934502273069522, 0.9081279352482187, 0.06447693454398953, 0.998690151163602, -0.6477049981199062, 0.9143457577146786, 2.0956557126471984, 0.16896008689091047, 0.79244562734407, 0.7859520478334291, -1.1153069366344097, 0.556102479604867, 0.05497112192187448, 1.5632854329218229, 1.2000398526965077, -0.0890107502464866, 1.2604428659688685, 0.966804294156318, 0.42040695713631865, 1.109636448050612, 1.4637533894361743, 1.5670424865548227, 0.8285506175221397, 2.0305571731724497, 0.3071328547433215, 1.2124460762829872, 0.025815877647359625, 0.39974600400590105, 1.1486759685603505, 0.5766717139884917, 0.1230267776313233, 0.24969161751318275, 2.810570348466211, -1.2651385326585924, 1.2507174683013225, -0.35669057349617916, 1.3655587465237924, 0.6541154747838932, -0.010953051886895937, -0.22739202391780294, 0.3315252767196956, -0.3342803386192902, 1.029404728635034, -0.35879628724335844, 1.8139128697776399]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "_lambdifygenerated() missing 33 required positional arguments: 'meal__n_2', 'Dummy_55', 'Dummy_54', 'Dummy_53', 'Dummy_52', 'restaur__n_0', 'restaur__n_1', 'restaur__n_2', 'Dummy_51', 'Dummy_50', 'servic__n_0', 'servic__n_1', 'servic__n_2', 'Dummy_49', 'Dummy_48', 'Dummy_47', 'Dummy_46', 'staff__n_0', 'staff__n_1', 'staff__n_2', 'Dummy_45', 'Dummy_44', 'Dummy_43', 'Dummy_42', 'Dummy_41', 'Dummy_40', 'Dummy_39', 'Dummy_38', 'waiter__n_0', 'waiter__n_1', 'waiter__n_2', 'Dummy_37', and 'Dummy_36'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# print test accuracy\u001b[39;00m\n\u001b[1;32m     29\u001b[0m test_cost_fn \u001b[38;5;241m=\u001b[39m make_cost_fn(test_pred_fn, test_targets, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/experiment_results/journal/generalQC/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mexperiment_name, test_name)\n\u001b[0;32m---> 30\u001b[0m test_cost_fn(result\u001b[38;5;241m.\u001b[39mx)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/experiment_results/journal/generalQC/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_accs.csv\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m csv_file:\n\u001b[1;32m     33\u001b[0m     csv_reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(csv_file, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[20], line 26\u001b[0m, in \u001b[0;36mmake_cost_fn.<locals>.cost_fn\u001b[0;34m(params, **kwargs)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcost_fn\u001b[39m(params, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 26\u001b[0m     predictions \u001b[38;5;241m=\u001b[39m pred_fn(params)\n\u001b[1;32m     28\u001b[0m     cost \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39msum(labels \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(predictions)) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(labels)  \u001b[38;5;66;03m# binary cross-entropy loss\u001b[39;00m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdirectory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_costs.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
+      "Cell \u001b[0;32mIn[18], line 16\u001b[0m, in \u001b[0;36mmake_pred_fn.<locals>.predict\u001b[0;34m(params)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(params):\n\u001b[0;32m---> 16\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m Circuit\u001b[38;5;241m.\u001b[39meval(\u001b[38;5;241m*\u001b[39m(c_fn(\u001b[38;5;241m*\u001b[39mparams) \u001b[38;5;28;01mfor\u001b[39;00m c_fn \u001b[38;5;129;01min\u001b[39;00m circuit_fns),\n\u001b[1;32m     17\u001b[0m                            \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mbackend_config, seed\u001b[38;5;241m=\u001b[39mrandint(rng))\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([normalise(output\u001b[38;5;241m.\u001b[39marray) \u001b[38;5;28;01mfor\u001b[39;00m output \u001b[38;5;129;01min\u001b[39;00m outputs])\n",
+      "Cell \u001b[0;32mIn[18], line 16\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(params):\n\u001b[0;32m---> 16\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m Circuit\u001b[38;5;241m.\u001b[39meval(\u001b[38;5;241m*\u001b[39m(c_fn(\u001b[38;5;241m*\u001b[39mparams) \u001b[38;5;28;01mfor\u001b[39;00m c_fn \u001b[38;5;129;01min\u001b[39;00m circuit_fns),\n\u001b[1;32m     17\u001b[0m                            \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mbackend_config, seed\u001b[38;5;241m=\u001b[39mrandint(rng))\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([normalise(output\u001b[38;5;241m.\u001b[39marray) \u001b[38;5;28;01mfor\u001b[39;00m output \u001b[38;5;129;01min\u001b[39;00m outputs])\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/discopy/monoidal.py:511\u001b[0m, in \u001b[0;36mDiagram.lambdify.<locals>.<lambda>\u001b[0;34m(*xs)\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlambdify\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mxs: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdom)\u001b[38;5;241m.\u001b[39mthen(\u001b[38;5;241m*\u001b[39m(\n\u001b[1;32m    512\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(left) \u001b[38;5;241m@\u001b[39m box\u001b[38;5;241m.\u001b[39mlambdify(\u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)(\u001b[38;5;241m*\u001b[39mxs)\n\u001b[1;32m    513\u001b[0m         \u001b[38;5;241m@\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(right) \u001b[38;5;28;01mfor\u001b[39;00m left, box, right \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayers))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/discopy/monoidal.py:512\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlambdify\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mxs: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdom)\u001b[38;5;241m.\u001b[39mthen(\u001b[38;5;241m*\u001b[39m(\n\u001b[0;32m--> 512\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(left) \u001b[38;5;241m@\u001b[39m box\u001b[38;5;241m.\u001b[39mlambdify(\u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)(\u001b[38;5;241m*\u001b[39mxs)\n\u001b[1;32m    513\u001b[0m         \u001b[38;5;241m@\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(right) \u001b[38;5;28;01mfor\u001b[39;00m left, box, right \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayers))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/discopy/quantum/gates.py:462\u001b[0m, in \u001b[0;36mParametrized.lambdify.<locals>.<lambda>\u001b[0;34m(*xs)\u001b[0m\n\u001b[1;32m    460\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msympy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m lambdify\n\u001b[1;32m    461\u001b[0m data \u001b[38;5;241m=\u001b[39m lambdify(symbols, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mdict\u001b[39m(kwargs, modules\u001b[38;5;241m=\u001b[39mTensor\u001b[38;5;241m.\u001b[39mnp))\n\u001b[0;32m--> 462\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mxs: \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)(data(\u001b[38;5;241m*\u001b[39mxs))\n",
+      "\u001b[0;31mTypeError\u001b[0m: _lambdifygenerated() missing 33 required positional arguments: 'meal__n_2', 'Dummy_55', 'Dummy_54', 'Dummy_53', 'Dummy_52', 'restaur__n_0', 'restaur__n_1', 'restaur__n_2', 'Dummy_51', 'Dummy_50', 'servic__n_0', 'servic__n_1', 'servic__n_2', 'Dummy_49', 'Dummy_48', 'Dummy_47', 'Dummy_46', 'staff__n_0', 'staff__n_1', 'staff__n_2', 'Dummy_45', 'Dummy_44', 'Dummy_43', 'Dummy_42', 'Dummy_41', 'Dummy_40', 'Dummy_39', 'Dummy_38', 'waiter__n_0', 'waiter__n_1', 'waiter__n_2', 'Dummy_37', and 'Dummy_36'"
+     ]
+    }
+   ],
    "source": [
     "# from noisyopt import minimizeSPSA\n",
     "# import time\n",
@@ -1126,7 +1132,7 @@
     "# from sympy import default_sort_key\n",
     "# import gc\n",
     "\n",
-    "# test_name = \"test_800\"\n",
+    "# test_name = \"test_130\"\n",
     "\n",
     "# # collect params\n",
     "# all_circuits = train_circuits + dev_circuits + test_circuits\n",
