--- a/src/GeneralQC_Experimentation.ipynb
+++ b/src/GeneralQC_Experimentation.ipynb
@@ -13,7 +13,7 @@
     "convert_bigraph = True\n",
     "not_representation = \"X\"\n",
     "not_placement = \"end\"\n",
-    "gate_layers = [\"H\", \"Rx\"]\n",
+    "gate_layers = [\"Rx\", \"X\"]\n",
     "var_layers = 1\n",
     "parameterize_nouns = True\n",
     "# independent_sublayer = False\n",
@@ -26,7 +26,7 @@
     "spsa_a = 0.2\n",
     "spsa_c = 0.06\n",
     "spsa_n_iter = 800\n",
-    "k0 = 0\n",
+    "k0 = 142\n",
     "\n",
     "# SVM type\n",
     "kernel = 'rbf'\n",
@@ -34,7 +34,7 @@
     "optimize_svm = False\n",
     "\n",
     "# Experiment metadata\n",
-    "experiment_name = \"v5_H_CRx_800iter_no_nouns_take4\"\n",
+    "experiment_name = \"v5_Rx_CX_800iter_with_nouns_take2\"\n",
     "verbose = True"
    ]
   },
@@ -546,8 +546,8 @@
     "S = AtomicType.SENTENCE\n",
     "\n",
     "# Convert string diagram to quantum circuit\n",
-    "# ansatz = GeneralQCAnsatz({N: 1, S: 1}, n_layers=1, n_single_qubit_params=3*int(parameterize_nouns), gate_config={\"gate_layers\": gate_layers, \"var_layers\": var_layers}, r=(1, -1))\n",
-    "ansatz = SimpleSAAnsatz({N: 1, S: 1}, n_layers=1, n_single_qubit_params=3*int(parameterize_nouns))"
+    "ansatz = GeneralQCAnsatz({N: 1, S: 1}, n_layers=1, n_single_qubit_params=3*int(parameterize_nouns), gate_config={\"gate_layers\": gate_layers, \"var_layers\": var_layers}, r=(1, -1))\n",
+    "# ansatz = SimpleSAAnsatz({N: 1, S: 1}, n_layers=1, n_single_qubit_params=3*int(parameterize_nouns))"
    ]
   },
   {
@@ -558,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96d896560a12462d8da0a64eaa36bf2a",
+       "model_id": "a249785ed7fa4c6b8c36b2dbb5a3e366",
        "version_major": 2,
        "version_minor": 0
       },
@@ -570,9 +570,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quantum/anaconda3/lib/python3.11/site-packages/torch/cuda/__init__.py:619: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n",
+      "/home/quantum/anaconda3/lib/python3.11/site-packages/torch/cuda/__init__.py:749: UserWarning: CUDA initialization: Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 804: forward compatibility was attempted on non supported HW (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
+      "  return torch._C._cuda_getDeviceCount() if nvml_count < 0 else nvml_count\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66b6906036724c038bdca024f14faf99",
+       "model_id": "8516c3a578f34171877e0ad2a9b77de5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -586,7 +596,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a98d1bdf06a4806ae5b11a25391d008",
+       "model_id": "1e4ea66748004886b97123a7313e2ab8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f502d76e237848e3a1093da4272cebbf",
+       "model_id": "125e8bc08bf14f68b73526d2a8e430e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +624,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4091a4be834641168e0932037c08d27c",
+       "model_id": "a0c0dc8fd59148329d7e49966720844d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -628,7 +638,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dca4cf3977e4a8fada2d55ebd5f4acc",
+       "model_id": "922a13e69511462ca611df0eb3ecb24d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,7 +652,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fde62a5e7010431588307461252d7c32",
+       "model_id": "37f73f208c4c4ae2b0f71f3fe31df8a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -656,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80b6076af07b4d1098a8e556e0b1a3b4",
+       "model_id": "9c6c64e707994b8f9bc79c93717a5e35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -670,7 +680,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f03fd3bdc5f14752bbd2af7049f68dd7",
+       "model_id": "34ce62b8181e49a58ff4f4a9268ce910",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1094,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,27 +1113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "_lambdifygenerated() missing 33 required positional arguments: 'meal__n_2', 'Dummy_55', 'Dummy_54', 'Dummy_53', 'Dummy_52', 'restaur__n_0', 'restaur__n_1', 'restaur__n_2', 'Dummy_51', 'Dummy_50', 'servic__n_0', 'servic__n_1', 'servic__n_2', 'Dummy_49', 'Dummy_48', 'Dummy_47', 'Dummy_46', 'staff__n_0', 'staff__n_1', 'staff__n_2', 'Dummy_45', 'Dummy_44', 'Dummy_43', 'Dummy_42', 'Dummy_41', 'Dummy_40', 'Dummy_39', 'Dummy_38', 'waiter__n_0', 'waiter__n_1', 'waiter__n_2', 'Dummy_37', and 'Dummy_36'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# print test accuracy\u001b[39;00m\n\u001b[1;32m     29\u001b[0m test_cost_fn \u001b[38;5;241m=\u001b[39m make_cost_fn(test_pred_fn, test_targets, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/experiment_results/journal/generalQC/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mexperiment_name, test_name)\n\u001b[0;32m---> 30\u001b[0m test_cost_fn(result\u001b[38;5;241m.\u001b[39mx)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/experiment_results/journal/generalQC/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexperiment_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_accs.csv\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m csv_file:\n\u001b[1;32m     33\u001b[0m     csv_reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(csv_file, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[20], line 26\u001b[0m, in \u001b[0;36mmake_cost_fn.<locals>.cost_fn\u001b[0;34m(params, **kwargs)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcost_fn\u001b[39m(params, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 26\u001b[0m     predictions \u001b[38;5;241m=\u001b[39m pred_fn(params)\n\u001b[1;32m     28\u001b[0m     cost \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39msum(labels \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(predictions)) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(labels)  \u001b[38;5;66;03m# binary cross-entropy loss\u001b[39;00m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdirectory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_costs.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "Cell \u001b[0;32mIn[18], line 16\u001b[0m, in \u001b[0;36mmake_pred_fn.<locals>.predict\u001b[0;34m(params)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(params):\n\u001b[0;32m---> 16\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m Circuit\u001b[38;5;241m.\u001b[39meval(\u001b[38;5;241m*\u001b[39m(c_fn(\u001b[38;5;241m*\u001b[39mparams) \u001b[38;5;28;01mfor\u001b[39;00m c_fn \u001b[38;5;129;01min\u001b[39;00m circuit_fns),\n\u001b[1;32m     17\u001b[0m                            \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mbackend_config, seed\u001b[38;5;241m=\u001b[39mrandint(rng))\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([normalise(output\u001b[38;5;241m.\u001b[39marray) \u001b[38;5;28;01mfor\u001b[39;00m output \u001b[38;5;129;01min\u001b[39;00m outputs])\n",
-      "Cell \u001b[0;32mIn[18], line 16\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(params):\n\u001b[0;32m---> 16\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m Circuit\u001b[38;5;241m.\u001b[39meval(\u001b[38;5;241m*\u001b[39m(c_fn(\u001b[38;5;241m*\u001b[39mparams) \u001b[38;5;28;01mfor\u001b[39;00m c_fn \u001b[38;5;129;01min\u001b[39;00m circuit_fns),\n\u001b[1;32m     17\u001b[0m                            \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mbackend_config, seed\u001b[38;5;241m=\u001b[39mrandint(rng))\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([normalise(output\u001b[38;5;241m.\u001b[39marray) \u001b[38;5;28;01mfor\u001b[39;00m output \u001b[38;5;129;01min\u001b[39;00m outputs])\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/discopy/monoidal.py:511\u001b[0m, in \u001b[0;36mDiagram.lambdify.<locals>.<lambda>\u001b[0;34m(*xs)\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlambdify\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mxs: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdom)\u001b[38;5;241m.\u001b[39mthen(\u001b[38;5;241m*\u001b[39m(\n\u001b[1;32m    512\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(left) \u001b[38;5;241m@\u001b[39m box\u001b[38;5;241m.\u001b[39mlambdify(\u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)(\u001b[38;5;241m*\u001b[39mxs)\n\u001b[1;32m    513\u001b[0m         \u001b[38;5;241m@\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(right) \u001b[38;5;28;01mfor\u001b[39;00m left, box, right \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayers))\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/discopy/monoidal.py:512\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlambdify\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mxs: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdom)\u001b[38;5;241m.\u001b[39mthen(\u001b[38;5;241m*\u001b[39m(\n\u001b[0;32m--> 512\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(left) \u001b[38;5;241m@\u001b[39m box\u001b[38;5;241m.\u001b[39mlambdify(\u001b[38;5;241m*\u001b[39msymbols, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)(\u001b[38;5;241m*\u001b[39mxs)\n\u001b[1;32m    513\u001b[0m         \u001b[38;5;241m@\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mid(right) \u001b[38;5;28;01mfor\u001b[39;00m left, box, right \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayers))\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/discopy/quantum/gates.py:462\u001b[0m, in \u001b[0;36mParametrized.lambdify.<locals>.<lambda>\u001b[0;34m(*xs)\u001b[0m\n\u001b[1;32m    460\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msympy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m lambdify\n\u001b[1;32m    461\u001b[0m data \u001b[38;5;241m=\u001b[39m lambdify(symbols, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mdict\u001b[39m(kwargs, modules\u001b[38;5;241m=\u001b[39mTensor\u001b[38;5;241m.\u001b[39mnp))\n\u001b[0;32m--> 462\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mxs: \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)(data(\u001b[38;5;241m*\u001b[39mxs))\n",
-      "\u001b[0;31mTypeError\u001b[0m: _lambdifygenerated() missing 33 required positional arguments: 'meal__n_2', 'Dummy_55', 'Dummy_54', 'Dummy_53', 'Dummy_52', 'restaur__n_0', 'restaur__n_1', 'restaur__n_2', 'Dummy_51', 'Dummy_50', 'servic__n_0', 'servic__n_1', 'servic__n_2', 'Dummy_49', 'Dummy_48', 'Dummy_47', 'Dummy_46', 'staff__n_0', 'staff__n_1', 'staff__n_2', 'Dummy_45', 'Dummy_44', 'Dummy_43', 'Dummy_42', 'Dummy_41', 'Dummy_40', 'Dummy_39', 'Dummy_38', 'waiter__n_0', 'waiter__n_1', 'waiter__n_2', 'Dummy_37', and 'Dummy_36'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from noisyopt import minimizeSPSA\n",
     "# import time\n",
