--- a/src/GeneralQC_Experimentation.ipynb
+++ b/src/GeneralQC_Experimentation.ipynb
@@ -26,7 +26,7 @@
     "spsa_a = 0.2\n",
     "spsa_c = 0.06\n",
     "spsa_n_iter = 800\n",
-    "k0 = 142\n",
+    "k0 = 516\n",
     "\n",
     "# SVM type\n",
     "kernel = 'rbf'\n",
@@ -558,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a249785ed7fa4c6b8c36b2dbb5a3e366",
+       "model_id": "48e0b619ba744b14a673b9405ea730f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -570,19 +570,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/quantum/anaconda3/lib/python3.11/site-packages/torch/cuda/__init__.py:619: UserWarning: Can't initialize NVML\n",
-      "  warnings.warn(\"Can't initialize NVML\")\n",
-      "/home/quantum/anaconda3/lib/python3.11/site-packages/torch/cuda/__init__.py:749: UserWarning: CUDA initialization: Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 804: forward compatibility was attempted on non supported HW (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
-      "  return torch._C._cuda_getDeviceCount() if nvml_count < 0 else nvml_count\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8516c3a578f34171877e0ad2a9b77de5",
+       "model_id": "ab6ee4a5fb3745bfa202d26e6e4b48d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -596,7 +586,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e4ea66748004886b97123a7313e2ab8",
+       "model_id": "26baeb8a7eeb47c7b7a6b1f8ca6500a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -610,7 +600,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "125e8bc08bf14f68b73526d2a8e430e8",
+       "model_id": "c7a79908bc104571971d0aa4864b402c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -624,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0c0dc8fd59148329d7e49966720844d",
+       "model_id": "96521c437c544008a785c557bbb8e798",
        "version_major": 2,
        "version_minor": 0
       },
@@ -638,7 +628,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "922a13e69511462ca611df0eb3ecb24d",
+       "model_id": "dc936afe08bf403e860fd3d2a18a4000",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,7 +642,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37f73f208c4c4ae2b0f71f3fe31df8a2",
+       "model_id": "e859e32d3b3f472ba68471bf4afe9d3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -666,7 +656,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c6c64e707994b8f9bc79c93717a5e35",
+       "model_id": "1fa02d33b0ec405887516c7b720b4f9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -680,7 +670,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34ce62b8181e49a58ff4f4a9268ce910",
+       "model_id": "b214bc6366684032a6e54dc88e093510",
        "version_major": 2,
        "version_minor": 0
       },
@@ -852,7 +842,19 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "from noisyopt import minimizeSPSA\n",
     "import time\n",
