upload iqp results

--- a/src/GeneralQC_Experimentation.ipynb
+++ b/src/GeneralQC_Experimentation.ipynb
@@ -29,14 +29,14 @@
     "# independent_sublayer = False\n",
     "\n",
     "# load params\n",
-    "train_params = True\n",
+    "train_params = False\n",
     "load_params = True\n",
-    "param_vals = [1.1554381448597588, -0.1022343929396032, 0.2324602422617714, -0.05621812291359259, 1.0416695878268791, 1.4509700144198832, 1.0365867787162115, 0.5729517313356166, 0.07696732463577928, 1.2043351802545124, 0.4966337056162958, -0.3939515218684402, 0.2694842615573272, 0.5781105104572654, 0.558554055531837, 0.091813154201224, 0.7976950669088912, 0.3941871199135981, 1.0821663216434974, 0.7438025439146231, -0.6550817626040365, 0.36745356158711673, 1.1518863625027647, -0.03812290848427371, 0.3725536921297251, -0.09963847194155175, 1.444912348260034, 1.241184045103884, 0.1850265733508724, 0.3758703788974753, 0.8359841571478691, 0.41949413743041286, -0.09110647129536283, 0.9896215864494943, 0.40594795364070935, 0.24458556731379746, 0.07059567362178383, 0.9654019033358179, 0.8927522771746325, 0.45418365118094495, 0.7957341693047572, 0.7029162127724079, 0.5665884879091495, 0.3575149403812744, 0.7107394955425946, 1.5149388135870636, 0.8536535366753865, 0.7236741453441925, -0.14639606550997467, 0.6598140699915825, 0.5888056041054209, 0.44762556508370177, 1.249050708455704, 0.2759140569465782, 0.3969673669633741, 0.3711119750995956, 0.18548192600244612, 1.3193705605472086, -0.38899608585606915, 0.481113877973801, 0.6883322202802834, 0.16361338154854851, 0.442983467659102, 0.7913592300419295, -0.5257084366938906, 0.7085411415540258, 0.9212901298875005, 1.690206546918638, 0.5715573575442588, -0.09371330179258573, 0.48925127187816025, 1.0761755204780366, -0.1612293295446363, 1.5584625869302127, -0.17118174574289532, 0.3194871287879282, 1.0142041802532533, 1.0681980344578574, 0.5672714391201888, 0.04313809148089417, 0.4545908389006955, 0.9793303462526431, 1.0032047983189285, 0.9211995798089024, 0.8638402388402705, 1.0054174603960575, 0.9560099508444102, 1.3577054597495508, 0.3168864891967026, 0.4491922951714843, 0.5515600773887129]\n",
+    "param_vals = [1.3505649493072467, -0.14966328435185, 0.04675537879798401, -0.0015354611799713639, 0.8467703608674717, 1.5964349654020935, 0.9415552599593355, 0.7916802060431765, 0.09940955754857185, 1.3473293118007097, 0.5579013343383226, -0.2679104960784575, 0.3776135427626039, 0.62703035023651, 0.4285010663953328, 0.019792381213966686, 0.940842946083086, 0.33781388773672416, 0.8487456927074848, 0.7556821018373534, -0.5608258781490134, 0.36476364832952235, 1.0737220311034188, -0.1124067666176007, 0.08191140893146531, -0.3822700356542936, 1.7675583352903093, 1.157455792341757, 0.17848596573971048, 0.4316137952186831, 0.8206557377751482, 0.6847553524509737, 0.05400777268978768, 1.2013720181631076, 0.28904507119386325, 0.06465854055487004, -0.09416797215962379, 1.051771804895434, 0.7506276718251563, 0.3884711100982121, 0.8482724716958543, 0.8149804380340482, 0.7896084168659374, 0.3496117177218967, 0.6011503910365614, 1.5729679680184632, 0.9792834796934351, 0.41266904602145826, -0.26523798248283115, 0.29819378568686317, 0.9586926117734706, 0.40703254844620307, 1.0296364797336521, 0.17863789971485083, -0.008456234920267822, 0.48771312748188433, 0.05076209488566123, 1.3298132342611912, -0.5878522477674955, 0.4067109276060562, 0.4423094947759354, 0.32301125698163086, 0.593848336018743, 0.6526038095556363, -0.4966519491527389, 0.6415696668260122, 0.7906445725342086, 1.5599899677343447, 0.558077628311284, -0.11041397551907499, 0.5957225862423388, 1.1732862757098548, -0.2265062280939964, 1.5044824049304453, -0.0533738041658748, 0.33420598890680564, 1.196245190159652, 0.9697961143224758, 0.6533425442624752, 0.08669834541405962, 0.48807237501014855, 1.0485106762146703, 1.0621443507152275, 0.9252129972582814, 0.9548661806967234, 0.9692520279388916, 1.170143153963476, 1.4122822854880106, 0.46545972319331497, 0.630801420187417, 0.40534540594920576]\n",
     "# params_saved = {'I__n_0': 1.3926202901320248, 'I__n_1': 0.008448820382520305, 'I__n_2': -0.6385783774702594, 'aw__n.r@s_0': 0.004878974097219957, 'aw__n@n.l_0': -1.710437394121971, 'bad__n.r@s_0': -2.0120646244526674, 'bad__n@n.l_0': -0.33328110433838587, 'bland__n.r@s_0': -1.8011492489090937, 'bland__n@n.l_0': -0.23301002690494765, 'cook__n.r@s@n.l_0': 2.666641605278804, 'cook__n.r@s@n.l_1': 0.35782850997078663, 'delici__n.r@s_0': -0.6784353476839611, 'delici__n@n.l_0': 2.5048532581915994, 'dislik__n.r@s@n.l_0': 1.264688638132907, 'dislik__n.r@s@n.l_1': 2.9058201511277773, 'fast__n.r@s_0': 1.5228059027468268, 'fast__n@n.l_0': 1.4318617692717328, 'food__n_0': 0.9510109180885518, 'food__n_1': 1.983545943335132, 'food__n_2': 0.31422754989262236, 'good__n.r@s_0': -0.37898061288101936, 'good__n@n.l_0': 0.3417258364922475, 'great__n.r@s_0': 0.32023762451562343, 'great__n@n.l_0': 1.9344786256084243, 'had__n.r@s@n.l_0': 0.9175005505289897, 'had__n.r@s@n.l_1': -1.126491771734188, 'hate__n.r@s@n.l_0': 1.0178843262642405, 'hate__n.r@s@n.l_1': -0.8544213946932742, 'impecc__n.r@s_0': 0.8774940821788493, 'impecc__n@n.l_0': 0.28533233081922516, 'like__n.r@s@n.l_0': 0.5238711836690633, 'like__n.r@s@n.l_1': -0.0248482491004431, 'love__n.r@s@n.l_0': -1.0716522290529822, 'love__n.r@s@n.l_1': 0.4674574117431039, 'meal__n_0': -0.2913227630628624, 'meal__n_1': -0.7824158049259571, 'meal__n_2': 2.364685233940882, 'nice__n.r@s_0': -0.31906215984000647, 'nice__n@n.l_0': -2.087345064482271, 'restaur__n_0': 1.9567881690203595, 'restaur__n_1': 0.35319298096689367, 'restaur__n_2': -0.5953604557383299, 'rude__n.r@s_0': 2.1631540155864895, 'rude__n@n.l_0': -0.9753409914505806, 'servic__n_0': -2.7047864895209357, 'servic__n_1': 1.2351321590961786, 'servic__n_2': -1.5851261977616085, 'show__n.r@s@n.l_0': -0.6393012792612347, 'show__n.r@s@n.l_1': 1.7857303585103954, 'slow__n.r@s_0': 0.5156333465906835, 'slow__n@n.l_0': 1.0425765284092643, 'staff__n_0': 0.08543447326700565, 'staff__n_1': -2.068154595353262, 'staff__n_2': 0.019379227469981927, 'tasti__n.r@s_0': 1.2246133069435021, 'tasti__n@n.l_0': 1.9668107229444722, 'terribl__n.r@s_0': -0.3440262636975905, 'terribl__n@n.l_0': 2.1861199395142688, 'unappet__n.r@s_0': 1.440589048292482, 'unappet__n@n.l_0': -0.31598863954665035, 'wa__s@s.l_0': -1.0244128683696618}\n",
     "spsa_a = 0.2\n",
     "spsa_c = 0.06\n",
     "spsa_n_iter = 800\n",
-    "k0 = 81\n",
+    "k0 = 800\n",
     "\n",
     "# SVM type\n",
     "kernel = 'rbf'\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,134 +534,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00dabbe6b60547f2b4a369d30b28c785",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tagging sentences:   0%|          | 0/133 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca37f67c108640f1bf360d6efab76af5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing tagged sentences:   0%|          | 0/532 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8bbea03f1fe4ec4a12404d9f4542a6b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parse trees to diagrams:   0%|          | 0/532 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0a545665b2748e993509e1733a9804a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tagging sentences:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f437e0b399f04d17929c9be72c82b1eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing tagged sentences:   0%|          | 0/160 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5921359b79834236b89cfdae1ae797eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parse trees to diagrams:   0%|          | 0/160 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9a8ca15bc364fde9694afa072131acf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tagging sentences:   0%|          | 0/49 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cf762b7bd8f41f4a690054181966e24",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing tagged sentences:   0%|          | 0/194 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d97ac309af704939bd1784b6d43ba694",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parse trees to diagrams:   0%|          | 0/194 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data, train_diagrams, train_circuits, train_valids_mask = sentences_to_circuits(train_data_src, ansatz)\n",
     "dev_data, dev_diagrams, dev_circuits, dev_valids_mask = sentences_to_circuits(dev_data_src, ansatz)\n",
@@ -681,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,22 +953,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(len(test_data)):\n",
     "    print(i, \"|\", test_data[i])"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1089,7 @@
     "    all_circuit_fns[name] = [c_fn(*params_saved) for c_fn in circuit_fns]\n",
     "    all_predictions[name] = predictions\n",
     "\n",
-    "    with open(f'../data/experiment_results/journal/generalQC/{experiment_name}/{name}_130_outputs.csv', 'w', newline='') as f:\n",
+    "    with open(f'../data/experiment_results/journal/generalQC/{experiment_name}/{name}_800_outputs.csv', 'w', newline='') as f:\n",
     "        writer = csv.writer(f)\n",
     "\n",
     "        for e in results:\n",
@@ -1228,7 +1097,7 @@
     "\n",
     "        f.close()\n",
     "    \n",
-    "    with open(f'../data/experiment_results/journal/generalQC/{experiment_name}/{name}_130_predictions.txt', 'w', newline='') as f:\n",
+    "    with open(f'../data/experiment_results/journal/generalQC/{experiment_name}/{name}_800_predictions.txt', 'w', newline='') as f:\n",
     "        writer = csv.writer(f)\n",
     "\n",
     "        for e in predictions:\n",
@@ -1313,7 +1182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# params_saved = [1.0382071908989239, 0.6645383013161006, -0.4505922107096337, -0.9258480366208011, 0.5243618968855266, 1.7395961059411849, 0.4647940498155238, 0.11963985080039756, 0.7575906894935516, 0.6217733484213046, 1.8876486455893522, -0.6216977276762541, 1.5286322933119258, -0.17824219036710878, 1.0479170118398122, 0.10441785349863093, 0.9810306825596972, -0.6436704780948737, 1.0231047714057993, 1.9133754050783498, 0.008898227905438063, 0.8168863897229854, 0.7118337284456691, -1.2399646269882107, 0.4689238579415065, 0.14517396947347422, 1.5052105796928223, 1.1224107614547414, 0.00355179288247217, 1.2057591172570594, 0.9511974737102875, 0.21815226443490673, 1.0347415087805212, 1.4816345055134295, 1.539767495812046, 0.8051562678596103, 1.9693861049253931, 0.3057059184280759, 1.0316692627713562, 0.3007999857278838, 0.4867949596977848, 1.0972200899952786, 0.522699105484079, -0.07493770555006797, 0.2691568636127531, 2.653374877606683, -1.3329960158657639, 1.2158264798346405, -0.1055619547971146, 1.4221597559721224, 0.49779112986218066, 0.08156544659088309, -0.36224721778927393, 0.3803414617435599, -0.44288471657679424, 1.0064246507523504, -0.14946461951136408, 1.862217540713058]"
+    "params_saved = [1.3505649493072467, -0.14966328435185, 0.04675537879798401, -0.0015354611799713639, 0.8467703608674717, 1.5964349654020935, 0.9415552599593355, 0.7916802060431765, 0.09940955754857185, 1.3473293118007097, 0.5579013343383226, -0.2679104960784575, 0.3776135427626039, 0.62703035023651, 0.4285010663953328, 0.019792381213966686, 0.940842946083086, 0.33781388773672416, 0.8487456927074848, 0.7556821018373534, -0.5608258781490134, 0.36476364832952235, 1.0737220311034188, -0.1124067666176007, 0.08191140893146531, -0.3822700356542936, 1.7675583352903093, 1.157455792341757, 0.17848596573971048, 0.4316137952186831, 0.8206557377751482, 0.6847553524509737, 0.05400777268978768, 1.2013720181631076, 0.28904507119386325, 0.06465854055487004, -0.09416797215962379, 1.051771804895434, 0.7506276718251563, 0.3884711100982121, 0.8482724716958543, 0.8149804380340482, 0.7896084168659374, 0.3496117177218967, 0.6011503910365614, 1.5729679680184632, 0.9792834796934351, 0.41266904602145826, -0.26523798248283115, 0.29819378568686317, 0.9586926117734706, 0.40703254844620307, 1.0296364797336521, 0.17863789971485083, -0.008456234920267822, 0.48771312748188433, 0.05076209488566123, 1.3298132342611912, -0.5878522477674955, 0.4067109276060562, 0.4423094947759354, 0.32301125698163086, 0.593848336018743, 0.6526038095556363, -0.4966519491527389, 0.6415696668260122, 0.7906445725342086, 1.5599899677343447, 0.558077628311284, -0.11041397551907499, 0.5957225862423388, 1.1732862757098548, -0.2265062280939964, 1.5044824049304453, -0.0533738041658748, 0.33420598890680564, 1.196245190159652, 0.9697961143224758, 0.6533425442624752, 0.08669834541405962, 0.48807237501014855, 1.0485106762146703, 1.0621443507152275, 0.9252129972582814, 0.9548661806967234, 0.9692520279388916, 1.170143153963476, 1.4122822854880106, 0.46545972319331497, 0.630801420187417, 0.40534540594920576]"
    ]
   },
   {
@@ -1425,7 +1294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
